2008-10-05  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/37706
	* module.c (load_equiv): Check the module before negating the
	unused flag.

2008-09-26  Tobias Burnus  <burnus@net-b.de>

	PR fortran/37580
	* expr.c (gfc_check_pointer_assign): Add checks for pointer
	remapping.

2008-09-26  Tobias Burnus  <burnus@net-b.de>

	PR fortran/37504
	* expr.c (gfc_check_pointer_assign): Allow assignment of
	protected pointers.

2008-09-25  Tobias Burnus  <burnus@net-b.de>

	PR fortran/37626
	* trans-array.c (gfc_trans_deferred_array): Don't auto-deallocate
	result variable.

2008-09-24  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/35945
	* resolve.c (resolve_fl_variable_derived):  Remove derived type
	comparison for use associated derived types.  Host association
	of a derived type will not arise if there is a local derived type
	whose use name is the same.

	PR fortran/36700
	* match.c (gfc_match_call):  Use the existing symbol even if
	it is a function.

2008-09-24  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/37583
	* decl.c (gfc_match_entry): Both subroutines and functions can
	give a true for get_proc_mame's last argument so remove the
	&& gfc_current_ns->proc_name->attr.function.
	resolve.c (resolve_actual_arglist): Add check for recursion by
	reference to procedure as actual argument.

2008-09-23  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/37274
	PR fortran/36374
	* module.c (check_for_ambiguous): New function to test loaded
	symbol for ambiguity with fixup symbol.
	(read_module): Call check_for_ambiguous.
	(write_symtree): Do not write the symtree for symbols coming
	from an interface body.

	PR fortran/36374
	* resolve.c (count_specific_procs ): New function to count the
	number of specific procedures with the same name as the generic
	and emit appropriate errors for and actual argument reference.
	(resolve_assumed_size_actual): Add new argument no_formal_args.
	Correct logic around passing generic procedures as arguments.